--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint:style": "stylelint src/**/*.{css,scss,vue}"
+  },
+  "lint-staged": {
+    "*.{js,vue}": "eslint --fix",
+    "*.{css,scss,vue}": "stylelint --fix",
+    "*": "prettier -w -u" 
   },
   "dependencies": {
     "vue": "^3.0.5",
@@ -13,8 +19,16 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/compiler-sfc": "^3.0.5",
+    "eslint": "^7.25.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "prettier": "^2.2.1",
     "sass": "^1.32.12",
+    "stylelint": "^13.13.1",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-config-standard": "^22.0.0",
     "vite": "^2.2.3"
   }
 }
