--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "*": "prettier -w -u"
   },
   "dependencies": {
+    "primeflex": "^2.0.0",
+    "primevue": "^3.4.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0"
