--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "lint:style": "stylelint src/**/*.{css,scss,vue}"
+    "lint:style": "stylelint src/**/*.{css,scss,vue}",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --watchAll --no-cache"
   },
   "lint-staged": {
     "*.{js,vue}": "eslint --fix",
     "*.{css,scss,vue}": "stylelint --fix",
-    "*": "prettier -w -u" 
+    "*": "prettier -w -u"
   },
   "dependencies": {
     "vue": "^3.0.5",
@@ -18,17 +19,21 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.1",
     "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/compiler-sfc": "^3.0.11",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/compiler-sfc": "^3.0.5",
-    "eslint": "^7.25.0",
+    "@vue/test-utils": "^2.0.0-rc.6",
+    "eslint": "^7.26.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
-    "prettier": "^2.2.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.3.0",
     "sass": "^1.32.12",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-standard": "^22.0.0",
-    "vite": "^2.2.3"
+    "vite": "^2.2.3",
+    "vue-jest": "^5.0.0-alpha.9"
   }
 }
