--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-vue-starter",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview",
     "lint:style": "stylelint src/**/*.{css,scss,vue}",
