--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
     "primevue": "^3.4.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.6",
